adding some inital testing thoughts

--- a/test/fixtures/cat1_fragments/wrapper.xml.erb
+++ b/test/fixtures/cat1_fragments/wrapper.xml.erb
@@ -148,8 +148,9 @@
     <structuredBody>
       <component>
         <section>
-
-        <%= yield %> 
+        <%number_of_entries.times do %>
+        <%= render :template=>"encounter_performed_fragment" %> 
+        <% end %>
         </section>
       </component>
     </structuredBody>
