--- a/test/fixtures/cat1_fragments/encounter_performed_fragment.xml.erb
+++ b/test/fixtures/cat1_fragments/encounter_performed_fragment.xml.erb
@@ -4,7 +4,9 @@
     <templateId root="2.16.840.1.113883.10.20.22.4.49"/>
     <!-- Encounter performed template -->
     <templateId root="2.16.840.1.113883.10.20.24.3.23"/>
+    <% if include_id %>
     <id root="1.3.6.1.4.1.115" extension="512ba7eae7e915f677000003"/>
+    <% end %>
     <code code="112689000" codeSystem="2.16.840.1.113883.6.96" sdtc:valueSet="2.16.840.1.113883.3.666.5.625"><originalText>Encounter, Performed: Hospital Measures-Encounter Inpatient (Code List: 2.16.840.1.113883.3.666.5.625)</originalText></code>
     <text>Encounter, Performed: Hospital Measures-Encounter Inpatient (Code List: 2.16.840.1.113883.3.666.5.625)</text>
     <statusCode code="completed"/>
